# src/routes/movieRoutes.js
@@ -1,18 +1,16 @@
 import express from 'express';
-import { 
-    getAllMovies, 
-    createMovie, 
-    getMovieById, 
-    updateMovie, 
-    deleteMovie 
-} from '../controllers/movieController.js';
+import { getAllMovies, createMovie, deleteMovie, updateMovie, getMovieById } from '../controllers/movieController.js';
+import { authMiddleware } from '../middlewares/authMiddleware.js'; // Importe o que acabamos de criar
 
 const router = express.Router();
 
-router.get('/', getAllMovies); // Listar todos 
-router.post('/', createMovie); // Salvar novo 
-router.get('/:id', getMovieById); // Listar por ID 
-router.put('/:id', updateMovie); // Atualizar por ID 
-router.delete('/:id', deleteMovie); // Remover por ID 
+// Rota pública: qualquer um pode listar filmes
+router.get('/', getAllMovies);
+router.get('/:id', getMovieById);
+
+// ROTAS PROTEGIDAS: Note que o authMiddleware vem antes do controller
+router.post('/', authMiddleware, createMovie); 
+router.put('/:id', authMiddleware, updateMovie);
+router.delete('/:id', authMiddleware, deleteMovie);
 
 export default router;
